<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@layout/fragment_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="br.com.tcc.easywork.fragments.BottomHome"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/navigation_menu"
        android:name="br.com.tcc.easywork.fragments.BottomMenu"
        android:label="@string/menu_menu"
        tools:layout="@layout/fragment_menu"/>

    <fragment
        android:id="@+id/navigation_trabalho"
        android:name="br.com.tcc.easywork.fragments.BottomTrabalhos"
        android:label="@string/menu_trabalhos"
        tools:layout="@layout/fragment_trabalhos"/>

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="br.com.tcc.easywork.fragments.BottomPerfil"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil"/>

</navigation>