<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fundoPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_"
    tools:context=".view.MainActivity">


    <ScrollView
        android:id="@+id/scrollPrincipal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="16dp"
                android:background="#FFFFFF"
                app:cardCornerRadius="4dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/icLogo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.497"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_rounded_person"
                        android:contentDescription="@string/todo" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardLogin"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="16dp"
                        app:cardCornerRadius="4dp"
                        app:cardElevation="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/edtLogin"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/edtLogin"
                                    android:inputType="textPersonName" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                app:passwordToggleEnabled="true">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/edtSenha"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/edtSenha"
                                    android:inputType="textPassword" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <Button
                                android:id="@+id/btnLogar"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/edtLogar" />

                            <CheckBox
                                android:id="@+id/cbLembrar"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/cbLembrar" />

                            <TextView
                                android:id="@+id/txtEsqueciSenha"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginTop="32dp"
                                android:text="@string/txtEsqueciSenha" />

                            <TextView
                                android:id="@+id/txtNovoCadastro"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginTop="4dp"
                                android:layout_marginBottom="4dp"
                                android:text="@string/txtCadastro" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>


            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>